--- a/style.css
+++ b/style.css
@@ -400,11 +400,18 @@ font-size:16px ;
          display: grid;
         grid-template-columns: repeat(1 ,1fr);
         justify-content: center; 
+
     }
 .card-container{
           display: grid;
         grid-template-columns: repeat(1 ,1fr);
         justify-content: center;  
+    }
+    .footer{
+         display: grid;
+        grid-template-columns: repeat(1 ,1fr);
+        justify-content: center;   
+        width: 100%;
     }
 }
 
